--- a/src/scss/_components/_header.scss
+++ b/src/scss/_components/_header.scss
@@ -70,7 +70,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      @include respond(max-medium) {
+      @include respond(max-large) {
         display: none;
 
         &.is-open {
