--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -1435,4 +1435,152 @@ picture {
   transition: opacity 0.3s ease-in-out;
 }
 
+/* line 3, src/scss/_components/_notFound.scss */
+.notFound {
+  overflow: hidden;
+  position: relative;
+  padding-top: 50px;
+  padding-bottom: 100px;
+}
+
+@media screen and (min-width: 320px) {
+  /* line 3, src/scss/_components/_notFound.scss */
+  .notFound {
+    padding-top: calc(50px + 97 * (100vw - 320px) / 1600);
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  /* line 3, src/scss/_components/_notFound.scss */
+  .notFound {
+    padding-top: 147px;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  /* line 3, src/scss/_components/_notFound.scss */
+  .notFound {
+    padding-bottom: calc(100px + 100 * (100vw - 320px) / 1600);
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  /* line 3, src/scss/_components/_notFound.scss */
+  .notFound {
+    padding-bottom: 200px;
+  }
+}
+
+/* line 9, src/scss/_components/_notFound.scss */
+.notFound__bg {
+  z-index: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../img/img-bg.png");
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: contain;
+}
+
+@media screen and (max-width: 1919px) {
+  /* line 9, src/scss/_components/_notFound.scss */
+  .notFound__bg {
+    background-size: cover;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  /* line 9, src/scss/_components/_notFound.scss */
+  .notFound__bg {
+    background-position: 0 0;
+  }
+}
+
+/* line 28, src/scss/_components/_notFound.scss */
+.notFound .c-grid {
+  z-index: 1;
+  position: relative;
+}
+
+@media screen and (max-width: 575px) {
+  /* line 28, src/scss/_components/_notFound.scss */
+  .notFound .c-grid {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+}
+
+/* line 37, src/scss/_components/_notFound.scss */
+.notFound__wrapper {
+  padding-top: 75px;
+}
+
+@media screen and (min-width: 320px) {
+  /* line 37, src/scss/_components/_notFound.scss */
+  .notFound__wrapper {
+    padding-top: calc(75px + 21 * (100vw - 320px) / 1600);
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  /* line 37, src/scss/_components/_notFound.scss */
+  .notFound__wrapper {
+    padding-top: 96px;
+  }
+}
+
+/* line 41, src/scss/_components/_notFound.scss */
+.notFound__img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* line 48, src/scss/_components/_notFound.scss */
+.notFound__img-wrap {
+  padding-left: 35px;
+  padding-right: 35px;
+  padding-bottom: 18px;
+}
+
+@media screen and (min-width: 320px) {
+  /* line 48, src/scss/_components/_notFound.scss */
+  .notFound__img-wrap {
+    padding-bottom: calc(18px + 18 * (100vw - 320px) / 1600);
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  /* line 48, src/scss/_components/_notFound.scss */
+  .notFound__img-wrap {
+    padding-bottom: 36px;
+  }
+}
+
+/* line 55, src/scss/_components/_notFound.scss */
+.notFound__message {
+  text-align: center;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+@media screen and (min-width: 320px) {
+  /* line 55, src/scss/_components/_notFound.scss */
+  .notFound__message {
+    font-size: calc(18px + 42 * (100vw - 320px) / 1600);
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  /* line 55, src/scss/_components/_notFound.scss */
+  .notFound__message {
+    font-size: 60px;
+  }
+}
+
 /*# sourceMappingURL=maps/app.css.map */
