--- a/src/scss/_components/_notFound.scss
+++ b/src/scss/_components/_notFound.scss
@@ -15,7 +15,7 @@
     height: 100%;
     background-image: url('../img/img-bg.png');
     background-repeat: no-repeat;
-    background-position: top center;
+    background-position: center 50%;
     background-size: contain;
     @include respond(max-wide-large) {
       background-size: cover;
