--- a/src/pug/shared/_script.pug
+++ b/src/pug/shared/_script.pug
@@ -1,5 +1,7 @@
 // SCRIPT :: START
 
+script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIbEk7W2kX53Upp7c0rROppSIDGjFyPew")
+
 if(env)
   script(src="js/bundle.min.js")
 else
