--- a/src/scss/_components/_header.scss
+++ b/src/scss/_components/_header.scss
@@ -44,7 +44,7 @@
 
     &-left {
       padding-left: 38px;
-      @include respond(max-extra-large) {
+      @include respond(max-wide-small) {
         padding-left: 0;
       }
       @include respond(max-large) {
