--- a/src/scss/_shared/_common.scss
+++ b/src/scss/_shared/_common.scss
@@ -46,6 +46,30 @@
       }
     }
 
+    &--input {
+      justify-content: space-between;
+      @include respond(max-extra-small) {
+        flex-wrap: wrap;
+      }
+
+      .c-form__group-col {
+        width: 190px;
+        margin-left: 5px;
+        margin-right: 5px;
+        @include respond(max-extra-small) {
+          width: 100%;
+          margin: 0;
+        }
+
+        &:first-of-type {
+          margin-left: 0;
+        }
+        &:last-of-type {
+          margin-right: 0;
+        }
+      }
+    }
+
     &-col {
       &-0 {}
       &-1 {}
@@ -56,7 +80,85 @@
   &__field {
     position: relative;
 
-    &--select {}
+    &--btn {
+      display: flex;
+      justify-content: flex-end;
+    }
+  }
+
+  &__input {
+    outline: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: calc(100% - 6px);
+    padding: 0 20px;
+    border-radius: 5px;
+    border: 3px solid rgb(141, 150, 174);
+    box-shadow: none;
+    color: #4d5964;
+    font-size: 16px;
+    font-weight: 500;
+    @include inputPlaceholder {
+      color: #4d5964;
+    }
+
+    &-wrapper {
+      position: relative;
+      min-height: 62px;
+      background-color: $c-white;
+      margin-bottom: 16px;
+
+      &:before {
+        z-index: 0;
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 5px;
+        border: 6px solid #e4eaef;
+        background-color: #e4eaef;
+      }
+    }
+  }
+
+  &__textarea {
+    outline: none;
+    resize: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: calc(100% - 8px);
+    padding: 20px;
+    border-radius: 5px;
+    border: 3px solid rgb(141, 150, 174);
+    box-shadow: none;
+    color: #4d5964;
+    font-size: 16px;
+    font-weight: 500;
+
+    &-wrapper {
+      position: relative;
+      min-height: 309px;
+      margin-bottom: 16px;
+
+      &:before {
+        z-index: 0;
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 5px;
+        border: 8px solid #e4eaef;
+        background-color: #e4eaef;
+      }
+    }
   }
 
   &__select {
@@ -109,7 +211,7 @@
       line-height: 62px;
       width: calc(100% - 27px);
       padding-left: 27px;
-      border-radius: 5px;
+      border-bottom-left-radius: 5px;
       border-bottom: 5px solid #e4eaef;
       color: #4d5964;
       font-size: 16px;
@@ -146,6 +248,53 @@
         border-bottom-right-radius: 5px;
         @include transition(background-color, border-color);
       }
+    }
+  }
+
+  &__btn {
+    outline: none;
+    cursor: pointer;
+    position: relative;
+    width: 100%;
+    max-width: 190px;
+    height: 56px;
+    margin-left: auto;
+    border: none;
+    border-radius: 5px;
+    background-color: rgb(214, 39, 60);
+    color: $c-white;
+    line-height: 62px;
+    font-size: 24px;
+    font-weight: bold;
+    text-shadow: 0 2px 0 rgba(#af1932, 1);
+    @include transition(text-shadow);
+    @include respond(max-extra-small) {
+      max-width: 100%;
+    }
+
+    &:hover {
+      text-shadow: none;
+      @include transition(text-shadow);
+
+      &:before {
+        border-color: rgb(214, 39, 60);
+        background-color: rgb(214, 39, 60);
+        @include transition(border-color, background-color);
+      }
+    }
+
+    &:before {
+      z-index: -1;
+      content: '';
+      position: absolute;
+      bottom: -6px;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 5px;
+      border: 6px solid #af1932;
+      background-color: #af1932;
+      @include transition(border-color, background-color);
     }
   }
 }
