--- a/src/scss/_components/_main.scss
+++ b/src/scss/_components/_main.scss
@@ -3,32 +3,36 @@
 .main {
   overflow: hidden;
   position: relative;
-  @include fluid(min-height, 320px, 1920px, 369px, 640px);
+  @include fluid(min-height, 320px, 1920px, 431px, 640px);
   @include fluid(padding-top, 320px, 1920px, 50px, 147px);
 
   .c-grid {
     @include respond(max-extra-small) {
-      padding-left: 25px;
-      padding-right: 25px;
+      padding-left: 16px;
+      padding-right: 16px;
     }
   }
 
   &__bg {
     z-index: 0;
     position: absolute;
-    top: 0;
+    top: 50px;
     left: 0;
     width: 100%;
-    height: 100%;
+    @include fluid(height, 320px, 1920px, 431px, 581px);
     background-image: url('../img/img-bg-main.png');
     background-repeat: no-repeat;
     background-position: bottom center;
-    background-size: contain;
-    @include respond(max-wide-large) {
-      background-size: cover;
-    }
-    @include respond(max-extra-small) {
-      background-position: 0 0;
+
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
     }
   }
 
@@ -37,7 +41,10 @@
     position: relative;
     display: flex;
     align-items: flex-start;
-    @include fluid(padding-top, 320px, 1920px, 75px, 105px);
+    @include fluid(padding-top, 320px, 1920px, 70px, 105px);
+    @include respond(max-small) {
+      flex-wrap: wrap;
+    }
 
     &-left {
       width: 580px;
@@ -63,12 +70,9 @@
         max-width: 50%;
       }
       @include respond(max-small) {
-        z-index: 0;
-        position: absolute;
+        position: relative;
         max-width: 100%;
-        bottom: 0;
-        right: 0;
-        transform: translateX(40%);
+        height: 180px;
       }
 
       img {
@@ -80,6 +84,12 @@
         max-width: 100%;
         height: auto;
         margin-left: auto;
+        @include respond(max-small) {
+          position: absolute;
+          top: -20px;
+          right: -45%;
+          max-height: 100%;
+        }
       }
     }
   }
@@ -90,6 +100,9 @@
     color: $c-white;
     @include respond(max-large) {
       white-space: normal;
+    }
+    @include respond(max-small) {
+      text-align: center;
     }
   }
 
