Edits - contacts and 404 pages.

--- a/src/scss/_components/_info.scss
+++ b/src/scss/_components/_info.scss
@@ -4,6 +4,9 @@
   &__wrapper {
     padding-top: 55px;
     padding-bottom: 95px;
+    @include respond(max-small) {
+      padding-top: 0;
+    }
   }
 
   &__box {
