--- a/src/scss/_components/_contacts.scss
+++ b/src/scss/_components/_contacts.scss
@@ -9,20 +9,23 @@
   &__bg {
     z-index: 0;
     position: absolute;
-    top: 0;
+    top: 50px;
     left: 0;
     width: 100%;
-    height: 100%;
+    @include fluid(height, 320px, 1920px, 431px, 581px);
     background-image: url('../img/img-bg.png');
     background-repeat: no-repeat;
-    background-position: center 75px;
-    background-size: contain;
-    @include respond(max-wide-large) {
-      background-position: center top;
-      background-size: cover;
-    }
-    @include respond(max-extra-small) {
-      background-position: 0 0;
+    background-position: bottom center;
+
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
     }
   }
 
@@ -31,8 +34,8 @@
     position: relative;
     max-width: 1342px;
     @include respond(max-extra-small) {
-      padding-left: 25px;
-      padding-right: 25px;
+      padding-left: 20px;
+      padding-right: 20px;
     }
   }
 
@@ -53,11 +56,18 @@
           width: 60%;
           padding-left: 0;
         }
+        @include respond(max-small) {
+          width: 100%;
+          padding-right: 0;
+        }
       }
       .contact__row-right {
         width: 30%;
         @include respond(max-large) {
           width: 40%;
+        }
+        @include respond(max-small) {
+          display: none;
         }
 
         img {
@@ -140,14 +150,26 @@
     &-img {
       width: 139px;
       @include respond(max-small) {
-        width: 100%;
+        width: 36px;
         padding-bottom: 12px;
+      }
+      @include respond(max-extra-small) {
+        width: 36px;
+      }
+
+      img {
+        display: block;
+        max-width: 100%;
+        height: auto;
       }
     }
 
     &-text {
       display: flex;
       flex-direction: column;
+      @include respond(max-small) {
+        width: 100%;
+      }
 
       p,
       span {
