--- a/src/scss/_components/_notFound.scss
+++ b/src/scss/_components/_notFound.scss
@@ -9,19 +9,23 @@
   &__bg {
     z-index: 0;
     position: absolute;
-    top: 0;
+    top: 50px;
     left: 0;
     width: 100%;
-    height: 100%;
+    @include fluid(height, 320px, 1920px, 431px, 581px);
     background-image: url('../img/img-bg.png');
     background-repeat: no-repeat;
-    background-position: center 50%;
-    background-size: contain;
-    @include respond(max-wide-large) {
-      background-size: cover;
-    }
-    @include respond(max-extra-small) {
-      background-position: 0 0;
+    background-position: bottom center;
+
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
     }
   }
 
@@ -44,6 +48,9 @@
     height: auto;
     margin-left: auto;
     margin-right: auto;
+    @include respond(medium) {
+      width: 430px;
+    }
 
     &-wrap {
       padding-left: 35px;
@@ -56,7 +63,7 @@
     text-align: center;
     //font-size: 60px;
     font-weight: bold;
-    @include fluid(font-size, 320px, 1920px, 18px, 60px);
+    @include fluid(font-size, 320px, 1920px, 18px, 64px);
   }
 }
 
